# PacketManagerClient

./: .gitmodules  CMakeLists.txt  typescript
libs/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/App/: App.cpp  App.h  CMakeLists.txt
src/NetworkApi/: CMakeLists.txt  NetworkApi.cpp  NetworkApi.h
src/Utils/: CMakeLists.txt  Utils.cpp  Utils.h
src/filereader/: FileReader.cpp  FileReader.h
src/metadata/: CMakeLists.txt  config.h.in  version.cpp  version.h
